--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             margin-bottom: 40px;
         }
         #logo img {
-            max-width: 400px; 
+            max-width: 200px; 
             height: auto;
         }
         #loginForm, #categories, #adminPanel {
@@ -55,7 +55,7 @@
 </head>
 <body>
     <div id="logo">
-        <img src="rew.jpg" alt="REWARS Logo">
+        <img src="rew.jpg" alt="Logo">
     </div>
 
     <div id="loginForm">
