--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </style>
 </head>
 <body>
-    <div id="logo">
+    <div id="Rewards logo">
         <img src="rew.jpg" alt="Logo">
     </div>
 
