--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
 </head>
 <body>
     <div id="Rewards logo">
-        <img src="images/rew.jpg" alt="Logo">
+        <img src="price/rew.jpg" alt="Logo">
+/rew.jpg" alt="Logo">
     </div>
 
     <div id="loginForm">
