--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </head>
 <body>
     <div id="Rewards logo">
-        <img src="price/rew.jpg" alt="Logo">
+        <img src="rew.jpg" alt="Logo">
 /rew.jpg" alt="Logo">
     </div>
 
