--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
 </head>
 <body>
     <div id="Rewards logo">
-        <img src="rew.jpg" alt="Logo">
+        <img src="rew.jpg"alt="Logo">
+        /rew.jpg"alt="logo">
     </div>
 
     <div id="loginForm">
