--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             margin-bottom: 10px;
         }
         #logo img {
+            text-align: center;
             max-width: 180px; 
             height: auto;
         }
@@ -55,7 +56,7 @@
 </head>
 <body>
     <div id="Rewards logo">
-        <img src="rew.jpg"alt="Logo">
+        <img src="row.jpg"alt="Logo">
         /rew.jpg"alt="logo">
     </div>
 
