--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
         #logo {
             text-align: center;
-            font-size: 2em;
+            font-size: 1em;
             margin-bottom: 10px;
         }
         #logo img {
@@ -56,7 +56,7 @@
 </head>
 <body>
     <div id="Rewards logo">
-        <img src="row.jpg"alt="Logo">
+        <img src="ro/w.jpg" alt="Logo">
     </div>
 
     <div id="loginForm">
