--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         #logo {
             text-align: center;
             font-size: 1em;
-            margin-bottom: 10px;
+            margin-bottom: 20px;
         }
         #logo img {
             text-align: center;
-            max-width: 180px; 
+            max-width: 80px; 
             height: auto;
         }
         #loginForm, #categories, #adminPanel {
@@ -56,7 +56,7 @@
 </head>
 <body>
     <div id="Rewards logo">
-        <img src="ro/w.jpg" alt="Logo">
+        <img src="/row.jpg" alt="Logo">
     </div>
 
     <div id="loginForm">
