--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </head>
 <body>
     <div id="Rewards logo">
-        <img src="/row.jpg" alt="Logo">
+        <img src="row.jpg" alt="Logo">
     </div>
 
     <div id="loginForm">
