--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 </head>
 <body>
     <div id="Rewards logo">
-        <img src="row.jpg" alt="Logo">
+        <img src="row.jpg" alt="logo">
+        /row.jpg"alt="logo">
     </div>
 
     <div id="loginForm">
