--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         }
         #logo {
             text-align: center;
-            font-size: 1em;
+            font-size: 2em;
             margin-bottom: 20px;
         }
         #logo img {
             text-align: center;
-            max-width: 80px; 
+            max-width: 50px; 
             height: auto;
         }
         #loginForm, #categories, #adminPanel {
@@ -56,8 +56,8 @@
 </head>
 <body>
     <div id="Rewards logo">
-        <img src="row.jpg" alt="logo">
-        /row.jpg"alt="logo">
+        <img src="/row.jpg" alt="logo">
+
     </div>
 
     <div id="loginForm">
