--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         }
         #logo img {
             text-align: center;
-            max-width: 50px; 
+            max-width: 180px; 
+            aspect-ratio: 4/3;
+            objet-fit: cover
             height: auto;
         }
         #loginForm, #categories, #adminPanel {
