--- a/index.html
+++ b/index.html
@@ -16,12 +16,10 @@
             font-size: 2em;
             margin-bottom: 20px;
         }
-        #logo img {
-            text-align: center;
-            max-width: 180px; 
+        .logo-image {
+            width: 180px; 
             aspect-ratio: 4/3;
             objet-fit: cover
-            height: auto;
         }
         #loginForm, #categories, #adminPanel {
             background-color: rgb(169, 211, 198);
