--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <body>
     <div id="Rewards logo">
         <img src="/row.jpg" alt="logo">
-
+     /row.jpg" alt="logo">
     </div>
 
     <div id="loginForm">
