--- a/index.html
+++ b/index.html
@@ -80,12 +80,24 @@
         const users = [
             { username: "alan@20", password: "AL20!", isAdmin: true },
             { username: "al@K20", password: "AC20*", isAdmin: false },
-            { username: "user2", password: "pass2", isAdmin: false }
+            { username: "eo@M19", password: "EO19!", isAdmin: false },
+            { username: "lv@K18", password: "LV18#", isAdmin: false },
+            { username: "fd@B19", password: "FD19&", isAdmin: false },
+            { username: "na@F19", password: "NA19*", isAdmin: false },
+            { username: "mj@D19", password: "MJ19/", isAdmin: false },
+            { username: "se@F19", password: "SE19!", isAdmin: false },
+            { username: "ha@D19", password: "A19&", isAdmin: false },
+            { username: "mj@FT19", password: "FT19*", isAdmin: false },
+            { username: "n@MK20", password: "N20%", isAdmin: false },
+            { username: "h@D19", password: "hD19?", isAdmin: false },
+            { username: "li@L20", password: "LM20&", isAdmin: false },
+            { username: "sr@D19", password: "SR19%", isAdmin: false },
         ];
 
         const categories = [
-            { name: "Meilleur Chanteur", nominees: ["JEAN", "LOU"], descriptions: ["Parce qu'il a une belle voix", "Parce qu'elle a un beau visage"] },
-            { name: "Meilleur Acteur", nominees: ["Pierre", "Marie"], descriptions: ["Pour sa performance dans le film X", "Pour son rôle dans la série Y"] },
+            { name: "Meilleur(e) Président(e)", nominees: ["Luxel", "Eryne", "Sorelle", "Alane", "Harold", "Manich", "Steve", "Nicky"], descriptions: ["Affaires Inutiles", "PDG", "Finances", "Affaires Internes", "Chargé de Communication mais qui ne parle pas beaucoup", "Technique", "Clash gratuits", "Sécrétaire générale"] },
+            { name: "Team O ou E ?", nominees: ["OKOK", "ERU"]},
+            { name: "Meilleur centre de répétition", nominees: ["ORA", "COREX", "PSA", "Domicile", "Centre où sorelle faisait les cours j'ai oublié le nom" ]},
         ];
 
         let votes = [];
