--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 
         const categories = [
             { name: "Meilleur(e) Président(e)", nominees: ["Luxel", "Eryne", "Sorelle", "Alane", "Harold", "Manich", "Steve", "Nicky"], descriptions: ["Affaires Inutiles", "PDG", "Finances", "Affaires Internes", "Chargé de Communication mais qui ne parle pas beaucoup", "Technique", "Clash gratuits", "Sécrétaire générale"] },
-            { name: "Team O ou E ?", nominees: ["OKOK", "ERU"]},
-            { name: "Meilleur centre de répétition", nominees: ["ORA", "COREX", "PSA", "Domicile", "Centre où sorelle faisait les cours j'ai oublié le nom" ]},
+            { name: "Team O ou E", nominees: ["OKOK", "ERU"] },
+            { name: "Meilleur centre de répétition", nominees: ["ORA", "COREX", "PSA", "Domicile", "Centre où sorelle faisait les cours j'ai oublié le nom" ] },
         ];
 
         let votes = [];
