--- a/index.html
+++ b/index.html
@@ -104,18 +104,9 @@
         <div class="category">
             <div class="category-title">L'âme de la fête</div>
             <div class="nominees">
-                <div class="nominee" onclick="vote(this)">
-                    Hafsa
-                    <div class="description">Celle qui fait vivre et ambiance les moments festifs</div>
-                </div>
-                <div class="nominee" onclick="vote(this)">
-                    Michelle
-                    <div class="description">Celle qui fait vivre et ambiance les moments festifs</div>
-                </div>
-                <div class="nominee" onclick="vote(this)">
-                    Sorelle
-                    <div class="description">Celle qui fait vivre et ambiance les moments festifs</div>
-                </div>
+                <div class="nominee" onclick="vote(this)">Hafsa</div>
+                <div class="nominee" onclick="vote(this)">Michelle</div>
+                <div class="nominee" onclick="vote(this)">Sorelle</div>
             </div>
         </div>
 
@@ -151,22 +142,10 @@
         <div class="category">
             <div class="category-title">Prix de l'excellence 2024</div>
             <div class="nominees">
-                <div class="nominee" onclick="vote(this)">
-                    FRANCK
-                    <div class="description">Pour les documents qu'il partage avec nous, documents d'apprentissage, de conseils, livres, il est nominé pour être le gardien du savoir</div>
-                </div>
-                <div class="nominee" onclick="vote(this)">
-                    ERYNE
-                    <div class="description">Pour l'évolution de sa personnalité, son extraversion (par ses statuts, sa maturité..), elle est nominée pour être la personnalité de l'année</div>
-                </div>
-                <div class="nominee" onclick="vote(this)">
-                    MANICH
-                    <div class="description">En raison de sa diligence à nous adresser des vœux presque (18/12/2024) chaque jour, il est nominé AGENDA MAN</div>
-                </div>
-                <div class="nominee" onclick="vote(this)">
-                    IVAN
-                    <div class="description">Pour partager avec nous les actualités politiques, ce qui se passe autour de notre pays d'origine, son amour pour sa patrie, est nominé comme gardien de la culture</div>
-                </div>
+                <div class="nominee" onclick="vote(this)">FRANCK</div>
+                <div class="nominee" onclick="vote(this)">ERYNE</div>
+                <div class="nominee" onclick="vote(this)">MANICH</div>
+                <div class="nominee" onclick="vote(this)">IVAN</div>
             </div>
         </div>
     </div>
